--- a/styles/style.css
+++ b/styles/style.css
@@ -61,9 +61,10 @@
   src: url(santello-regular.ttf);
 }
 .main_chapter {
-  display: grid;
+  display: flex;
+  flex-flow: row;
   grid-template-columns: 1fr 1fr;
-  grid-gap: 5em;
+  grid-gap: 282px;
   width: 50%;
   margin-top: 6em;
 }
@@ -76,6 +77,7 @@
   font-weight: 500;
   line-height: normal;
   margin-left: 0.75em;
+  text-wrap: nowrap;
 }
 
 .main_chapter_specs {
@@ -85,4 +87,25 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+  text-wrap: nowrap;
+  margin-left: auto;
+}
+
+.main_chapter_box_specs {
+  margin-left: auto;
+  order: 2;
+  margin: 0 10px;
+}
+
+.yellow_line {
+  outline: 1px solid #F3C301;
+  background: #F3C301;
+  height: 2px;
+  width: screen;
+  margin-left: 1.7em;
+  margin-right: 1.7em;
+}
+
+.h2 {
+  font-style: none;
 }/*# sourceMappingURL=style.css.map */
