--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -1,5 +1,3 @@
-
-
 .div_header {
     display: flex;
     justify-content: center;
@@ -175,16 +173,50 @@ li{
 
 .list_specs{
     list-style-type: none;
+    padding: 0;
 }
 
 .list_li_specs{
     display: inline-flex;
     margin-right: 10px;
+    padding: 0;
 }
 .fifty {
-    width: 50%;
+    width: 35%;
+    margin: 0;
 }
 
 .main_list_box {
     width: 100%;
+    display: flex;
+}
+.main_list_box_third {
+    width: 100%;
+    display: flex;
+    margin-top: 4em;
+}
+
+.black_box {
+    width: 50em;
+    height: 343px; 
+    flex-shrink: 0;
+    border-radius: 10px;
+    background: var(--unnamed, #111);
+}
+
+.black_box_text{
+    color: var(--unnamed, #F3C301);
+    font-family: Santello Regular;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    padding-left: 3em;
+}
+
+.list_li_specs_work{
+    display: inline-flex;
+    margin-right: 10px;
+    padding: 0;
+    width: fit-content;
 }
