--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -26,7 +26,7 @@
 
 .phonenumber{
     color: var(--unnamed, #111);
-    font-family: Santello Regular;
+    font-family: SantelloRegular;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
@@ -95,6 +95,13 @@ html{
     height: 2px;
     width: 98%;
     margin-left: 0.75em;
+    text-align: right;
+}
+.yellow_line_half {
+    outline: 1px solid #F3C301;
+    background: #F3C301;
+    height: 2px;
+    margin-left: 0.75em;
 }
 
 .list_first {
@@ -110,7 +117,7 @@ li{
 
 .list_box{
     //padding-left: 540px;
-    width: 50%;
+    width: 70%;
 }
 
 .main_chapter_second {
@@ -119,6 +126,7 @@ li{
     flex-flow: row;
     grid-template-columns: 1fr 1fr;
     padding-left: 60.5em;
+    font-family: SantelloRegular;
 }
 
 .main_chapter_box_specs_second {
@@ -156,7 +164,6 @@ li{
 }
 
 .main_chapter_box_header {
-    margin-top: 3em;
     width: 50%;
     text-align: left;
 }
@@ -166,7 +173,6 @@ li{
     width: fit-content;
     order: 2;
     margin: 0 37.5px;
-    margin-top: 10.3em;
     width: 50%;
     text-align: right;
 }
@@ -190,10 +196,18 @@ li{
     width: 100%;
     display: flex;
 }
+
 .main_list_box_third {
     width: 100%;
     display: flex;
     margin-top: 4em;
+}
+
+.main_list_box_fourth {
+    width: 100%;
+    display: flex;
+    margin-top: 4em;
+    margin-bottom: 8em;
 }
 
 .black_box {
@@ -211,12 +225,55 @@ li{
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    padding-left: 3em;
+    margin-right: 10px;
+    padding: 45px;
 }
 
 .list_li_specs_work{
     display: inline-flex;
-    margin-right: 10px;
     padding: 0;
-    width: fit-content;
+}
+
+.list_li_specs_text{
+    display: inline-flex;
+    margin-right: 10px;
+    padding: 0px 60px 0px;
+}
+
+.specs_text{
+    color: var(--unnamed, #F2F0F0);
+    font-family: SantelloRegular;
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    max-width: 393px;
+    }
+
+.header_specs{
+    margin-right: 10px;
+    padding: 45px;
+}
+
+.half_line {
+    display: flex;
+}
+
+@font-face {
+    font-family: "SantelloRegular";
+    src: url("santello-regular.ttf");
+}
+
+.characteristics {
+    color: var(--unnamed, #111);
+    font-family: SantelloRegular;
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    }
+
+.black_box_footer{
+    background-color: black;
+    height: 207px;
 }
