--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,67 +1,11 @@
+@import "components/header.css";
+@import "components/main.css";
+@import "components/footer.css";
 body {
   background-image: url("img/image 8.png");
   background-repeat: no-repeat;
   background-position: top right;
   background-size: 77%;
-}
-
-.div_header {
-  display: flex;
-  justify-content: center;
-  flex-direction: row;
-  align-items: center;
-}
-
-.logo_header,
-.lines_header {
-  margin: 10px;
-}
-
-.phone_header {
-  margin: 10px 10px 10px 10px;
-}
-
-.logo_header {
-  position: absolute;
-  left: 1em;
-}
-
-.lines_header {
-  position: absolute;
-  right: 1em;
-}
-
-.phonenumber {
-  color: var(--unnamed, #111);
-  font-family: SantelloRegular;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  margin: 0;
-}
-
-.high_text {
-  color: var(--unnamed, #111);
-  font-family: "Manrope", sans-serif;
-  font-size: 90px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: normal;
-  padding-top: 2.5em;
-  margin: 0.3em;
-  width: fit-content;
-}
-
-.high_under_text {
-  color: var(--unnamed, #111);
-  font-family: "Santello";
-  font-size: 28px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  margin-top: 1.5em;
-  margin-left: 8em;
 }
 
 @font-face {
@@ -70,289 +14,6 @@ body {
 }
 html {
   max-width: 100%;
-}
-
-.main_chapter_header {
-  color: var(--unnamed, #111);
-  font-family: "Manrope";
-  font-size: 45px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-  margin-left: 0.75em;
-  text-wrap: nowrap;
-  margin-bottom: 0;
-}
-
-.main_chapter_specs {
-  color: var(--unnamed, #111);
-  font-family: "Santello";
-  font-size: 32px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  text-wrap: nowrap;
-  margin: 0;
-}
-
-.yellow_line {
-  outline: 1px solid #F3C301;
-  background: #F3C301;
-  height: 2px;
-  width: 98%;
-  margin-left: 0.75em;
-  text-align: right;
-}
-
-.yellow_line_half {
-  outline: 1px solid #F3C301;
-  background: #F3C301;
-  height: 2px;
-  margin-left: 0.75em;
-}
-
-.list_first {
-  display: none;
-}
-
-li {
-  display: flex;
-  padding: 10px 22px;
-  align-items: center;
-  gap: 10px;
-}
-
-.list_box {
-  width: 70%;
-}
-
-.main_chapter_second {
-  max-width: 1920px;
-  display: flex;
-  flex-flow: row;
-  grid-template-columns: 1fr 1fr;
-  padding-left: 60.5em;
-  font-family: SantelloRegular;
-}
-
-.main_chapter_box_specs_second {
-  height: fit-content;
-  width: fit-content;
-  order: 2;
-  margin: 0 37.5px;
-  margin-top: 2em;
-}
-
-.main_chapter_specs_second {
-  color: var(--unnamed, #111);
-  font-family: "Santello";
-  font-size: 32px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  text-wrap: nowrap;
-  margin: 0;
-}
-
-.align {
-  text-align: right;
-  margin: 0;
-}
-
-.main_chapter {
-  max-width: 1920px;
-  display: flex;
-  flex-flow: row;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 170px;
-  width: 100%;
-  margin-top: 1em;
-}
-
-.main_chapter_box_header {
-  width: 50%;
-  text-align: left;
-}
-
-.main_chapter_box_specs {
-  height: fit-content;
-  width: fit-content;
-  order: 2;
-  margin: 0 37.5px;
-  width: 50%;
-  text-align: right;
-}
-
-.list_specs {
-  list-style-type: none;
-  padding: 0;
-}
-
-.list_li_specs {
-  display: inline-flex;
-  margin-right: 10px;
-  padding: 0;
-}
-
-.fifty {
-  width: 35%;
-  margin: 0;
-}
-
-.main_list_box {
-  width: 100%;
-  display: flex;
-}
-
-.main_list_box_third {
-  width: 100%;
-  display: flex;
-  margin-top: 4em;
-}
-
-.main_list_box_fourth {
-  width: 100%;
-  display: flex;
-  margin-top: 4em;
-  margin-bottom: 8em;
-}
-
-.black_box {
-  width: 50em;
-  height: 343px;
-  flex-shrink: 0;
-  border-radius: 10px;
-  background: var(--unnamed, #111);
-}
-
-.black_box_text {
-  color: var(--unnamed, #F3C301);
-  font-family: Santello Regular;
-  font-size: 32px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  margin-right: 10px;
-  padding: 45px;
-}
-
-.list_li_specs_work {
-  display: inline-flex;
-  padding: 0;
-}
-
-.list_li_specs_text {
-  display: inline-flex;
-  margin-right: 10px;
-  padding: 0px 60px 0px;
-}
-
-.specs_text {
-  color: var(--unnamed, #F2F0F0);
-  font-family: SantelloRegular;
-  font-size: 28px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  max-width: 393px;
-}
-
-.header_specs {
-  margin-right: 10px;
-  padding: 45px;
-}
-
-.half_line {
-  display: flex;
-}
-
-@font-face {
-  font-family: "SantelloRegular";
-  src: url("santello-regular.ttf");
-}
-.characteristics {
-  color: var(--unnamed, #111);
-  font-family: SantelloRegular;
-  font-size: 28px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-}
-
-.black_box_footer {
-  background-color: black;
-  height: 207px;
-}
-
-.main-chapter-header-second {
-  color: var(--unnamed, #111);
-  font-family: "Manrope";
-  font-size: 45px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-  text-wrap: nowrap;
-}
-
-.main-chapter-description-second {
-  color: var(--unnamed, #111);
-  font-family: "Santello";
-  font-size: 32px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  text-wrap: nowrap;
-}
-
-.container {
-  width: 96%;
-  margin: 0 auto;
-  display: flex;
-  align-items: flex-end;
-}
-
-.box {
-  border-radius: 10px;
-  width: 760px;
-  height: 400px;
-  background-color: #000;
-  box-sizing: border-box;
-}
-
-.box-description {
-  vertical-align: top;
-  width: calc(60% - 4px);
-  display: inline-block;
-}
-
-.box-description p {
-  color: #fff;
-  padding: 50px;
-  color: var(--unnamed, #F2F0F0);
-  font-family: SantelloRegular;
-  font-size: 28px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-}
-
-.box-description .title {
-  color: var(--unnamed, #F3C301);
-  font-family: Santello Regular;
-  font-size: 32px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-}
-
-.box-image {
-  width: 40%;
-  height: 100%;
-  background: url("./img/image 9.png") center center no-repeat;
-  background-size: cover;
-  display: inline-block;
-  border-top-right-radius: 10px;
-  border-bottom-right-radius: 10px;
 }
 
 /*# sourceMappingURL=style.css.map */
