Ended Laptop version

--- a/public/styles/components/main.css
+++ b/public/styles/components/main.css
@@ -164,12 +164,17 @@ li {
   padding: 0;
 }
 
+.slider {
+  display: flex;
+  justify-content: space-between;
+}
+
 .slider__item {
   background-color: black;
   display: flex;
   height: fit-content;
   width: 440px;
-  border-radius: 10px;
+  border-radius: 11px;
   display: flex;
   flex-direction: column;
 }
@@ -188,6 +193,7 @@ li {
   background: white;
   height: 2px;
   width: 100%;
+  margin-top: 14px;
 }
 
 .slider__item-text {
@@ -197,6 +203,41 @@ li {
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+}
+
+.footer {
+  background-color: black;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.footer__name {
+  color: var(--unnamed, #F3C301);
+  font-family: Manrope;
+  font-size: 45px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.footer__link-phone,
+.footer__link-instagram {
+  color: var(--unnamed, #F2F0F0);
+  font-family: "SantelloRegular";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.footer__button {
+  height: 100%;
+}
+
+footer {
+  margin-top: 100px;
+  width: 100%;
 }
 
 /*# sourceMappingURL=main.css.map */
