--- a/public/styles/components/header.scss
+++ b/public/styles/components/header.scss
@@ -1,7 +1,8 @@
 .header__logo {
-  //remake
   position: absolute;
   left: 1em;
+  width: 74px;
+  height: 36px;
 
   .header__lines {
     margin: 10px;
