--- a/public/styles/components/main.scss
+++ b/public/styles/components/main.scss
@@ -58,9 +58,16 @@
   margin-left: 0.75em;
 }
 
-.chapter__list__item-active {
+.chapter__list__item-active-first,
+.chapter__list__item-active-second,
+.chapter__list__item-active-third,
+.chapter__list__item-active-fourth{
   display: none;
 }
+
+//.chapter__list__item-image{
+//  transition: transform 0.1s ease;;
+//}
 
 .chapter__list__item-text {
   color: var(--unnamed, #111);
@@ -163,80 +170,4 @@ li {
 
 .chapter__list-box-horizontal{
   padding: 0;
-}
-
-.slider{
-  display: flex;
-  justify-content: space-between;
-}
-
-.slider__item{
-  background-color: black;
-  display: flex;
-  height: fit-content;
-  width: 440px;
-  border-radius: 11px;
-  display: flex;
-  flex-direction: column;
-}
-
-.slider__item-name{
-  color: var(--unnamed, #F3C301);
-  font-family: 'SantelloRegular';
-  font-size: 28px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-}
-
-.slider__item-whiteLine{
-  outline: 1px solid white;
-  background: white;
-  height: 2px;
-  width: 100%;
-  margin-top: 14px;
-}
-
-.slider__item-text{
-  color: var(--unnamed, #FFF);
-  font-family: 'SantelloRegular';
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-}
-
-.footer{
-  background-color: black;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.footer__name{
-  color: var(--unnamed, #F3C301);
-  font-family: Manrope;
-  font-size: 45px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-}
-
-.footer__link-phone,
-.footer__link-instagram {
-  color: var(--unnamed, #F2F0F0);
-  font-family: 'SantelloRegular';
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-}
-
-.footer__button {
-  height: 100%;
-}
-
-footer{
-  margin-top: 100px;
-  width: 100%;
 }
