--- a/public/styles/components/header.css
+++ b/public/styles/components/header.css
@@ -1,6 +1,8 @@
 .header__logo {
   position: absolute;
   left: 1em;
+  width: 74px;
+  height: 36px;
 }
 .header__logo .header__lines {
   margin: 10px;
