--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,6 +1,11 @@
 @import "components/header.css";
 @import "components/main.css";
 @import "components/footer.css";
+@import "components/slider.css";
+* {
+  scroll-behavior: smooth;
+}
+
 body {
   background-image: url("img/image 8.png");
   background-repeat: no-repeat;
